tools/flowc/tests/errors/error12.flow
import string;

// Test on detection of local-global variable re-declaration 

x = 5;

fun1() -> int {
	(\x, y -> x + y)(x, 1)
}
